--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
 unicorn-engine = "2.0.0"
 rhai = "*"
-lazy_static = "1.4.0"
-
 rust-sleigh = { path = "../rust-sleigh" }
+
+axum = "*"
+tokio = { version = "1.0", features = ["full"] }
+serde_json = "*"
