feat: support hooking with custom data

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ rust-sleigh = { path = "../rust-sleigh" }
 axum = "*"
 tokio = { version = "1.0", features = ["full"] }
 serde_json = "*"
+rand = "*"
